--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,12 @@
 
 <body>
     <h1>Weather App 🌤</h1>
-    <p>Enter a ZIP code to get the forecast.</p>
+
+    <form action="/forecast" method="POST">
+        <label for="zip">ZIP Code:</label>
+        <input id="zip" name="zip" type="text" placeholder="e.g., 01886" required />
+        <button type="submit">Get Forecast</button>
+    </form>
 </body>
 
 </html>
